# ConflictCampaign

./: .gitignore  README.md  default.db  main.py  package.json  pyproject.toml  tsconfig.json
scripts/: register.py
src/: app.py  dashboard.html  login.html  register.html  style.css  user.html
